<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Order_project3U</string>
    <string name="hint_name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Total</string>
    <string name="order">Order</string>
    <string name="with_cream">with whipped cream</string>
    <string name="without_cream">without whipped cream</string>
    <string name="with_chocolate">with chocolate</string>
    <string name="without_chocolate">without chocolate</string>
    <string name="subjectMail" translatable="false">
        Order from
        <xliff:g id="name" example="Lorenzo">%s</xliff:g>
        by Order APP
    </string>
    <string name="bar_mail" translatable="false">
        <xliff:g id="mailBar">barmailexample@qualcheclient.com</xliff:g>
    </string>
    <string name="message_fill_name">please insert a name</string>
</resources>
