<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_maino"
    android:padding="16dp"

    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:id="@+id/name_editText"
                android:inputType="textCapWords"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toppings"
                style="@style/Title"
                android:id="@+id/Topping_title" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whipped_cream"
                android:textSize="16sp"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:id="@+id/Cream_checkbox" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chocolate"
                android:paddingLeft="24dp"
                android:textSize="16sp"
                android:id="@+id/chocolate_checkbox"/>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                style="@style/Title"
                android:id="@+id/Quantity_title" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="-"
                    style="@style/Square_Button"
                    android:id="@+id/Minus_button"
                    android:onClick="subtract"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:id="@+id/Quantity_info" />
                <Button
                    android:text="+"
                    style="@style/Square_Button"
                    android:id="@+id/Plus_button"
                    android:onClick="addUp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_summary"
                style="@style/Title"
                android:id="@+id/OrderSummary_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:id="@+id/Price_info" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order"
                android:id="@+id/Order_button"
                android:onClick="order"/>



        </LinearLayout>





    </ScrollView>




